# boostcamp-indiean-recsys-09

./: .gitignore  Dockerfile  README.md  glassy-droplet-375219-9e50b4fc0381.json  requirements.txt  start.sh
.github/workflows/: Action_Slack.yml  deploy_docker.yml
backend/: __main__.py
backend/api/: README.md  init_db.py  login_form.html  main.py  pyproject.toml  requirements.txt  testing.py
backend/api/core/: database.py  inference.py  setting.py  steam_api.py
backend/api/core/utils/: inference.py  steam_api.py
backend/api/crud/: game.py  game_crud.py  history.py  recommend.py  user.py
backend/api/migrations/: env.py
backend/api/migrations/versions/: 1376f36eb505_.py  3475ea28333c_.py  38b209ca2468_.py  45be65cd0f6c_.py  462227b3b0a3_.py  4c62b9df2c60_.py  75c30e2921e8_.py  794ce9e1904d_.py  82f234675d71_.py  a65d1516308b_.py  a8ced4675c21_.py  b3a44d3462b5_.py  bcf1cd47381e_.py  ca3ddf6e57bc_.py  ead8e87dcb7b_.py
backend/api/models/: __init__.py  curation.py  game.py  history.py  recommend.py  user.py
backend/api/routers/: game.py  login.py  user.py
backend/api/schemas/: curation.py  game.py  history.py  recommend.py  user.py
backend/curation/: main.py  make_curation.ipynb  streamlit.py
backend/inference/: __main__.py  main.py
frontend/: README.md  __main__.py  main.py  requirements.txt
frontend/templates/: gamepage.html  history_false.html  history_true.html  index.html  login.html  login2.html  mypage.html  userpage.html
ml/: Inference.py  README.md  Train.py  _.py  ease.py  inference.py  item_encoder.joblib  little_project.ipynb  model.py  user_encoder.joblib
(+9 files in other folders)
