[tool.poetry]
name = "api"
version = "0.1.0"
description = "API server for Steam Indie Game Recommendation Project"
authors = ["Sungsu Bae <ssb6720@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fastapi = "^0.89.1"
requests = "^2.28.2"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
pyyaml = "^6.0"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
jupyter = "^1.0.0"
notebook = "^6.5.2"
numpy = "^1.24.1"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
